# cadl85

./: CLAUDE.md  Cargo.toml  README.md  demo.py  pyproject.toml
.github/workflows/: publish.yml
python/cadl85/: __init__.py
src/: lib.rs  python.rs
src/algorithms/optimal/rules/: discrepancy.rs  purity.rs
src/cover/: mod.rs
