[package]
name = "dtrees-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
#debug = true
opt-level = 3


[lib]
name = "dtrees_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.16.1"
rand = "0.9.0"
search_trail = "0.1.3"
float-cmp = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.1", features = ["derive"] }
serde_json = "1.0.141"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

[features]
python = ["pyo3", "numpy"]

[dev-dependencies]
paste = "1.0.15"
